maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:19: error: ':' expected but ',' found.
def Coord_voisin(x,y):Array[Int,Int] = {
                  ^JediEscaper:31: error: identifier expected but '}' found.
}
^